2011-08-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Timon Van Overveldt:
	bug #30268: Debugwire broken in avrdude-5.10
	* jtagmkII.c (jtagmkII_initialize): only try setting up a JTAG chain when
	the programmer is using JTAG.

2011-08-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #29636: AVRDude issues invalid CMD_CHECK_TARGET_CONNECTION
	on the AVRISP-MKII
	* stk500v2.c (stk500v2_program_enable): Rewrite the logic to
	explain ISP activation failures.
	* stk500v2_private.h: Fix the various STATUS_* constants;
	AVR069 and AVR079 disagreed in their values, even though they
	are apparently implementing the same logic behind.

2011-08-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #29650: Programming timeouts in ATmega128RFA1 are too slow
	* avrdude.conf.in (ATmega128RFA1): Bump write delay values for flash and
	EEPROM to 50 ms.

2011-08-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.conf.in (ATmega8515, ATmega8535, ATmega48, ATmega88, ATmega88P,
	ATtiny88, ATmega168, ATmega168P, ATmega328P): Bump delay value for STK500v2
	EEPROM write operation to 5, according to the respective XML files.

2011-08-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Darcy Houlahan:
	bug #29694: error in avrdude.conf for attiny84 eeprom
	* avrdude.conf.in (ATtiny84, ATtiny85): fix A7 bit in EEPROM write
	command.

2011-08-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Durant Gilles:
	* avrdude.conf.in (ATtiny4313): Fix flash addressing bits for manual ISP
	algorithm.

2011-08-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Philip:
	bug #31386: A "BUILD.svn" or similar "how to get started" doc would be helpful
	* BUILD-FROM-SVN: New file.

2011-08-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Nic Jones:
	bug #32539: [Documentation][Patch] Man page is misleading
	re: Dragon & PDI
	* doc/avrdude.texi: Update information about PDI connections
	on AVR Dragon

2011-08-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
